--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -1,15 +1,17 @@
 ---
 type: page
-title: Photos
-date: 2021-03-18
+title: Projects
+date: 2025-01-24
 ---
 
-# Photos
+# Projects
 
-Here's some of my photography.
+Here's some of my work.
 
 import Image from 'next/image'
 
+
+## Place Holder
 <Image
   src="/images/photo2.jpg"
   alt="Photo"
@@ -18,8 +20,9 @@ import Image from 'next/image'
   priority
   className="next-image"
 />
-[Unsplash ↗ ](https://unsplash.com/photos/WeYamle9fDM)
 
+
+## Place Holder
 <Image
   src="/images/photo.jpg"
   alt="Photo"
@@ -28,4 +31,3 @@ import Image from 'next/image'
   priority
   className="next-image"
 />
-[Unsplash ↗ ](https://unsplash.com/photos/ndN00KmbJ1c)
