Update project description for clarity and context
Expanded the project description to provide more detail about the work and its affiliation with the Center of Excellence in Wireless and Information Technology at Stony Brook University. This offers better context and improves the reader's understanding of the showcased projects.

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -6,7 +6,7 @@ date: 2025-01-24
 
 # Projects
 
-Here's some of my work.
+Here's are some projects I have been involved with that I can share with you.  A lot was done during my employment at the Center of Excellence in Wireless and Information Technology at Stony Brook University.
 
 import Image from 'next/image'
 
