Update bio on the homepage with a more personal touch
Revised the homepage introduction to better reflect personal passions, hobbies, and interests. Added details about family life and openness to connect over shared interests like tech and gaming. This update enhances the bio's relatability and depth.

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,7 +7,13 @@ description: Let me introduce myself
 
 # Matthew Cordaro
 
-Hey, I'm Matthew Cordaro, an Independent Software Engineer. I enjoy *nice walks on the beach* and stupid quick deployments of front-end experiences.
+Hey, I'm Matthew Cordaro, a software guy  with a passion for hardware and all things tech. Whether I'm writing code, working on a random hardware project, or diving into the latest video games, I'm always exploring new ways to challenge myself and innovate.
+
+Beyond the screen, I enjoy spending quality time with my amazing wife, Liz, and our furry pal, Scotty, who bring endless joy and mischief into my life. From epic game nights to spontaneous DIY projects, we're a team that's always up for an adventure. And let’s not forget a bowling night or two.
+
+Feel free to reach out if you share my enthusiasm for tech, gaming, or just want to chat about the latest trends in
+the industry.
+
 
 ---
 
