Update wording of projects.mdx
grammer, spelling, and formatting fixes for clarity.

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -6,7 +6,7 @@ date: 2025-01-24
 
 # Projects
 
-Here's are some projects I have been involved with over the years that I can share with you.  A lot was done during my employment at the Center of Excellence in Wireless and Information Technology at Stony Brook University (CEWIT).  As come across things I'll update this randomly.
+Here's some projects I have been involved with over the years that I can share with you. A lot was done during my time at the Center of Excellence in Wireless and Information Technology (CEWIT) at Stony Brook University. As I come across things I'll update this randomly.
 
 import Image from 'next/image'
 
