Add bowling ball holder project description to projects page
Included a brief description of the customizable bowling ball holder created in OpenSCAD, highlighting its features and linking to the GitHub repository. This update enriches the projects page with additional content for viewers.

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -12,6 +12,12 @@ import Image from 'next/image'
 
 ---
 
+IMAGE TO COME.
+Created this massively customizable bowling ball holder in OpenSCAD. If you didn't know, OpenSCAD uses a custom scripting language to produce 3D graphics.  The scripting language supports functional programming, parametrized modularization and reuse, and mathematical computation. Variables are scoped, but within each scope are immutable.
+[Bowling Ball Holder with Text](https://github.com/matthewcordaro/Bowling-Ball-Holder)
+
+---
+
 ## CEWIT - Stony Brook Smart Transit System _Discontinued_
 <Image
     src="/images/CEWIT/Transit bus.jpg"
