Add image and improve description for Bowling Ball Holder
Updated the Bowling Ball Holder project with an image, improved the description, and clarified its customization options. Introduced a more detailed explanation of features and linked to the GitHub repository for easy access.

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -12,9 +12,22 @@ import Image from 'next/image'
 
 ---
 
-IMAGE TO COME.
-Created this massively customizable bowling ball holder in OpenSCAD. If you didn't know, OpenSCAD uses a custom scripting language to produce 3D graphics.  The scripting language supports functional programming, parametrized modularization and reuse, and mathematical computation. Variables are scoped, but within each scope are immutable.
-[Bowling Ball Holder with Text](https://github.com/matthewcordaro/Bowling-Ball-Holder)
+## Bowling Ball Holder with Nameplate
+<Image
+    src="/images/ball-holder-with-name.jpg"
+    alt="Alpha Ball Holder with Name"
+    width={1440}
+    height={1084}
+    priority
+    className="next-image"
+/>
+_Alpha build above_
+
+Created this fully customizable OpenSCAD of a bowling ball holder that can have text put on it! You can change the text, text, depth. Make the text inny or outty. Change the wall thickness, holder height, lip size, and more!
+
+If you didn't know, OpenSCAD uses a custom scripting language to produce 3D graphics.  The scripting language supports functional programming, parametrized modularization and reuse, mathematical computation and has scoped Variables.
+
+Checkout [Bowling Ball Holder with Text](https://github.com/matthewcordaro/Bowling-Ball-Holder) and make one for yourself!
 
 ---
 
