Add Audio Switcher project with download link
Introduce the Audio Switcher project to the projects page, including a description and a download link for the application. Uploaded the corresponding `AudioSwitcher.msi` file for users to download.

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -12,6 +12,13 @@ import Image from 'next/image'
 
 ---
 
+## Audio Switcher
+
+Build in a 12 hour marathon, this app will let you switch your audio output between two options very quickly by double clicking the app icon in the tray.  Download and try it today!
+You can download it here: [AudioSwitcher](applications/AudioSwitcher.msi)
+
+---
+
 ## Bowling Ball Holder with Nameplate
 <Image
     src="/images/ball-holder-with-name.jpg"
