Update project title and description for Audio Switcher
Renamed the project to "Fast Audio Switcher" for clarity and appeal. Added a specific build date to enhance context and slightly refined the description for better readability.

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -12,9 +12,9 @@ import Image from 'next/image'
 
 ---
 
-## Audio Switcher
+## Fast Audio Switcher
 
-Build in a 12 hour marathon, this app will let you switch your audio output between two options very quickly by double clicking the app icon in the tray.  Download and try it today!
+Build in a 12 hour marathon on 3/4/2025, this app will let you switch your audio output between two options rapidly by double-clicking the app icon in the tray.  Download it today!
 You can download it here: [AudioSwitcher](applications/AudioSwitcher.msi)
 
 ---
