Refactor audio tool name and add detailed blog post.
Renamed "Fast Audio Switcher" to "Easy Audio Toggle" with a new description and first-run instructions. Created a blog post detailing the app's development journey, challenges faced, and key takeaways. Improved clarity and professionalism in project documentation.

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -6,16 +6,22 @@ date: 2025-01-24
 
 # Projects
 
-Here's some projects I have been involved with over the years that I can share with you. A lot was done during my time at the Center of Excellence in Wireless and Information Technology (CEWIT) at Stony Brook University. As I come across things I'll update this randomly.
+Here are some projects I’ve been involved with over the years that I can share with you.
+A lot was done during my time at the Center of Excellence in Wireless and Information Technology
+(CEWIT) at Stony Brook University.
+As I come across things, I'll update this randomly.
 
 import Image from 'next/image'
 
 ---
 
-## Fast Audio Switcher
+## Easy Audio Toggle
 
-Build in a 12 hour marathon on 3/4/2025, this app will let you switch your audio output between two options rapidly by double-clicking the app icon in the tray.  Download it today!
-You can download it here: [AudioSwitcher](applications/AudioSwitcher.msi)
+I built this app in a 16-hour marathon on March 4th and 5th 2025.
+
+[EasyAudioToggle](applications/EasyAudioToggle.msi) is a simple Windows app that lets you switch between your audio devices—like speakers or headphones—with a quick double click on its tray icon. Right-click it to tweak settings or close it. A friendly first-run message helps you get started and suggests keeping the icon handy in your system tray. Download it today, and if it makes your life easier, maybe buy me a coffee!
+
+_For more info [checkout my blogpost](matthewcordaro.com/posts/Building-Easy-Audio-Toggle)_
 
 ---
 
@@ -30,7 +36,7 @@ You can download it here: [AudioSwitcher](applications/AudioSwitcher.msi)
 />
 _Alpha build above_
 
-Created this fully customizable OpenSCAD of a bowling ball holder that can have text put on it! You can change the text, text, depth. Make the text inny or outty. Change the wall thickness, holder height, lip size, and more!
+I created this fully customizable OpenSCAD of a bowling ball holder that can have text put on it! You can change the text, text, depth. Make the text inny or outty. Change the wall thickness, holder height, lip size, and more!
 
 If you didn't know, OpenSCAD uses a custom scripting language to produce 3D graphics.  The scripting language supports functional programming, parametrized modularization and reuse, mathematical computation and has scoped Variables.
 
