--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,13 +7,38 @@ description: Let me introduce myself
 
 # Matthew Cordaro
 
-Hey, I'm Matthew Cordaro, a software guy  with a passion for hardware and all things tech. Whether I'm writing code, working on a random hardware project, or diving into the latest video games, I'm always exploring new ways to challenge myself and innovate.
+Hey, I’m Matthew Cordaro, a software engineer with a deep-rooted passion for all things tech.
+Whether coding, tinkering with hardware,
+or diving into video games, I’m always chasing the next challenge that sparks my curiosity.
+My journey in tech has been a wild ride—full of hands-on projects, teaching, leading teams,
+and finding new ways to solve problems.
+I love how this field lets me blend creativity with logic.
 
-Beyond the screen, I enjoy spending quality time with my amazing wife, Liz, and our furry pal, Scotty, who bring endless joy and mischief into my life. From epic game nights to spontaneous DIY projects, we're a team that's always up for an adventure. And let’s not forget a bowling night or two.
+I’ve got degrees in computer science, applied math, and an MBA from Stony Brook University,
+which laid the groundwork for a career that’s been anything but boring.
+One of my proudest achievements is moving up the ladder from a Research Assistant to Lead Engineer
+on the Stony Brook Smart Transit System—a real-time transit and emergency tracking platform
+that served the SBU community.
+I’ve also taught Python, mentored students, organized the annual Hack@CEWIT, a Major League Hacking hackathon,
+and managed IT systems for small businesses, all while sharpening my skills in Python,
+JavaScript, C#, and cloud platforms like AWS.
+I’m no stranger to hardware either—Raspberry Pi, Arduino,
+and 3D printing projects keep my hands busy and my mind buzzing.
+Whether I’m coding serverless functions, guiding cloud migrations, consulting on systems design,
+or bringing ideas to life with 3D printing,
+I’m all about making tech work better for everyone and inspiring others along the way.
 
-Feel free to reach out if you share my enthusiasm for tech, gaming, or just want to chat about the latest trends in
-the industry.
+When I’m not glued to a screen, I’m all about the good stuff that keeps life fun and balanced.
+I’m lucky to share my days with my incredible wife, Liz, and our goofy Dachshund, Scotty,
+who’s basically the boss of the house and the block.
+We enjoy league bowling two nights a week—currently I’m rocking a 215 average!
+I also love video and board games with friends and am a dedicated Steelers football fan.
+These keep me happy and grounded.
 
+If you’re into tech, gaming, or industry trends, let’s connect!
+I’m always up for swapping ideas, debating hardware hacks, or dreaming big.
+Reach out anytime—I love chatting with fellow enthusiasts.
+Who knows what ideas we might bring to life together?
 
 ---
 
