Update project introduction text for clarity
Simplified the introductory text to make it more concise and readable. Removed unnecessary details about the CEWIT affiliation and random updates to focus on the main message.

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -6,10 +6,7 @@ date: 2025-01-24
 
 # Projects
 
-Here are some projects I’ve been involved with over the years that I can share with you.
-A lot was done during my time at the Center of Excellence in Wireless and Information Technology
-(CEWIT) at Stony Brook University.
-As I come across things, I'll update this randomly.
+Here are some projects I’ve been involved with over the years that I can share.
 
 import Image from 'next/image'
 
