--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -14,6 +14,8 @@ import Image from 'next/image'
 
 ## Easy Audio Toggle
 
+**Version 1.1.0** Released March 23, 2025
+
 I built this app in a 16-hour marathon on March 4th and 5th 2025.
 
 [EasyAudioToggle](applications/EasyAudioToggle.msi) is a simple Windows app that lets you switch between your audio devices—like speakers or headphones—with a quick double click on its tray icon. Right-click it to tweak settings or close it. A friendly first-run message helps you get started and suggests keeping the icon handy in your system tray. Download it today, and if it makes your life easier, maybe buy me a coffee!
