Converted to default MD image

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -8,31 +8,22 @@ date: 2025-01-24
 
 Here are some projects I’ve been involved with over the years that I can share.
 
-import Image from 'next/image'
-
 ---
 
 ## Easy Audio Toggle
 
 **Version 1.1.0** Released March 23, 2025
 
-I built this app in a 16-hour marathon on March 4th and 5th 2025.
+I built this app in a 16-hour marathon on March 4–5 2025.
 
-[EasyAudioToggle](applications/EasyAudioToggle.msi) is a simple Windows app that lets you switch between your audio devices—like speakers or headphones—with a quick double click on its tray icon. Right-click it to tweak settings or close it. A friendly first-run message helps you get started and suggests keeping the icon handy in your system tray. Download it today, and if it makes your life easier, maybe buy me a coffee!
+[EasyAudioToggle](/applications/EasyAudioToggle.msi) is a simple Windows app that lets you switch between your audio devices, like speakers or headphones, with a quick double-click on its tray icon. Right-click it to tweak settings or close it. A friendly first-run message helps you get started and suggests keeping the icon handy in your system tray. Download it today, and if it makes your life easier, maybe buy me a coffee!
 
-_For more info [checkout my blogpost](matthewcordaro.com/posts/Building-Easy-Audio-Toggle)_
+_For more info [checkout my blogpost](/posts/Building-Easy-Audio-Toggle)_
 
 ---
 
 ## Bowling Ball Holder with Nameplate
-<Image
-    src="/images/ball-holder-with-name.jpg"
-    alt="Alpha Ball Holder with Name"
-    width={1440}
-    height={1084}
-    priority
-    className="next-image"
-/>
+![Alpha Ball Holder with Name](/images/ball-holder-with-name.jpg)
 _Alpha build above_
 
 I created this fully customizable OpenSCAD of a bowling ball holder that can have text put on it! You can change the text, text, depth. Make the text inny or outty. Change the wall thickness, holder height, lip size, and more!
@@ -44,15 +35,10 @@ Checkout [Bowling Ball Holder with Text](https://github.com/matthewcordaro/Bowli
 ---
 
 ## CEWIT - Stony Brook Smart Transit System _Discontinued_
-<Image
-    src="/images/CEWIT/Transit bus.jpg"
-    alt="CEWIT Video Wall"
-    width={1000}
-    height={625}
-    priority
-    className="next-image"
-/>
-SBU Brook University Smart Transit was the Stony Brook University student developed passenger information system for SBU Transit. SBU Smart Transit was developed through a partnership between the Stony Brook University Department of Transportation and Parking Operations, the Center of Excellence in Wireless and Information Technology (CEWIT) and the College of Engineering and Applied Sciences and was a comprehensive bus and shuttle global positioning system that provides live vehicle location, bus stop information, and estimated arrival times to passengers using web and mobile-based applications.
+![Smart Transit Bus](/images/CEWIT/Transit bus.jpg)
+SBU Brook University Smart Transit was the Stony Brook University "student developed passenger information system" for SBU Transit.
+SBU Smart Transit was developed through a partnership between the Stony Brook University Department of Transportation and Parking Operations, the Center of Excellence in Wireless and Information Technology (CEWIT) and the College of Engineering and Applied Sciences.
+It was a comprehensive bus and shuttle global positioning system that provides live vehicle location, bus stop information, and estimated arrival times to passengers using web and mobile-based applications.
 
 [Eurotech Brochure](https://www.eurotech.com/DLA/Library/cs/Eurotech_tracking_system_buses_shuttles_StonyBrookUniversity_cs.pdf)
 [Stony Brook News](https://news.stonybrook.edu/news/general/031212SBUTransit)
@@ -65,14 +51,8 @@ https://mmcdruginformation.nysdoh.suny.edu/
 ---
 
 ## Reality Deck @ CEWIT
-<Image
-    src="/images/CEWIT/DSCF0149-1600x1067.jpg"
-    alt="CEWIT Video Wall"
-    width={1600}
-    height={1067}
-    priority
-    className="next-image"
-/>
-_On July 13, 2010, Stony Brook University received a $1.4 million National Science Foundation grant to build the "Reality Deck," an Immersive Giga-pixel Display in a 40' x 30' x 11' high room in Stony Brook University's Center of Excellence in Wireless and Information Technology (CEWIT) containing 308 LCD display screens driven by an 85-node graphics computing cluster._
+![CEWIT Video Wall](/images/CEWIT/DSCF0149-1600x1067.jpg)
+_On July 13, 2010, Stony Brook University received a $1.4 million National Science Foundation grant to build the "Reality Deck," an Immersive Giga-pixel Display in a 40' x 30' x 11' high room in Stony Brook University's Center of Excellence in Wireless and Information Technology (CEWIT) containing 308 LCDs driven by an 85-node graphics computing cluster._
 
-I assisted with installation of hardware for a brief moment as an undergrad ad SBU.  Just a cool piece of tech to be a part of.
+I helped with the installation of hardware for a brief moment as an undergrad ad SBU.
+Just a cool piece of tech to be a part of.
