Added React Quotes to portfolio.mdx

--- a/pages/portfolio.mdx
+++ b/pages/portfolio.mdx
@@ -9,13 +9,19 @@ description: Let me introduce myself
 
 A list of React sites running on Netlify
 
-### Birthdays
+### Quotes
+
+[React Quotes](https://react-quotes.cordaro.dev) [Github🔗](https://github.
+com/matthewcordaro/Portfolio-React-Quotes)
+
+A carousel of quotes that uses `useState`.
+
+### Tours
 
 [React Tours](https://react-tours.cordaro.dev) [Github🔗](https://github.
 com/matthewcordaro/Portfolio-React-Tours)
 
 A list of tours that uses `useState` and `useEffect`.
-
 
 ### Birthdays
 
