Added React FAQ Accordion to portfolio.mdx

--- a/pages/portfolio.mdx
+++ b/pages/portfolio.mdx
@@ -9,6 +9,13 @@ description: Let me introduce myself
 
 A list of React sites running on Netlify
 
+### FAQ Accordion
+
+[React FAQ Accordion](https://react-faq-accordion.cordaro.dev) [Github🔗](https://github.
+com/matthewcordaro/Portfolio-React-FAQ-Accordion)
+
+An accordion of FAQs that uses `useState`.
+
 ### Quotes
 
 [React Quotes](https://react-quotes.cordaro.dev) [Github🔗](https://github.
