Update GitHub links in portfolio page
Replaced broken GitHub links with correct URLs in the portfolio.mdx file. This ensures all project references point to their respective repositories without errors.

--- a/pages/portfolio.mdx
+++ b/pages/portfolio.mdx
@@ -11,22 +11,19 @@ A list of React sites running on Netlify
 
 ### FAQ Accordion
 
-[React FAQ Accordion](https://react-faq-accordion.cordaro.dev) [Github🔗](https://github.
-com/matthewcordaro/Portfolio-React-FAQ-Accordion)
+[React FAQ Accordion](https://react-faq-accordion.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-FAQ-Accordion)
 
 An accordion of FAQs that uses `useState`.
 
 ### Quotes
 
-[React Quotes](https://react-quotes.cordaro.dev) [Github🔗](https://github.
-com/matthewcordaro/Portfolio-React-Quotes)
+[React Quotes](https://react-quotes.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Quotes)
 
 A carousel of quotes that uses `useState`.
 
 ### Tours
 
-[React Tours](https://react-tours.cordaro.dev) [Github🔗](https://github.
-com/matthewcordaro/Portfolio-React-Tours)
+[React Tours](https://react-tours.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Tours)
 
 A list of tours that uses `useState` and `useEffect`.
 
