Added React Tabbed Menu to portfolio.mdx

--- a/pages/portfolio.mdx
+++ b/pages/portfolio.mdx
@@ -9,6 +9,12 @@ description: Let me introduce myself
 
 A list of React sites running on Netlify
 
+### Tabbed Menu
+
+[React Tabbed Menu](https://react-tabbed-menu.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Tabbed-Menu)
+
+A menu with tabs that uses `useState`.
+
 ### FAQ Accordion
 
 [React FAQ Accordion](https://react-faq-accordion.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-FAQ-Accordion)
