--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -35,7 +35,7 @@ Checkout [Bowling Ball Holder with Text](https://github.com/matthewcordaro/Bowli
 ---
 
 ## CEWIT - Stony Brook Smart Transit System _Discontinued_
-![Smart Transit Bus](/images/CEWIT/Transit bus.jpg)
+![Smart Transit Bus](/images/CEWIT/Transit-bus.jpg)
 SBU Brook University Smart Transit was the Stony Brook University "student developed passenger information system" for SBU Transit.
 SBU Smart Transit was developed through a partnership between the Stony Brook University Department of Transportation and Parking Operations, the Center of Excellence in Wireless and Information Technology (CEWIT) and the College of Engineering and Applied Sciences.
 It was a comprehensive bus and shuttle global positioning system that provides live vehicle location, bus stop information, and estimated arrival times to passengers using web and mobile-based applications.
