Added Tabbed Resume to portfolio.mdx

--- a/pages/portfolio.mdx
+++ b/pages/portfolio.mdx
@@ -9,6 +9,12 @@ description: Let me introduce myself
 
 A list of React sites running on Netlify
 
+### Tabbed Resume
+
+[Site🔗](https://react-tabbed-resume.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Tabbed-Resume)
+
+A resume with tabs that uses `useState`.
+
 ### Tabbed Menu
 
 [React Tabbed Menu](https://react-tabbed-menu.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Tabbed-Menu)
