updated Link names to simply `Site`

--- a/pages/portfolio.mdx
+++ b/pages/portfolio.mdx
@@ -17,36 +17,36 @@ A resume with tabs that uses `useState`.
 
 ### Tabbed Menu
 
-[React Tabbed Menu](https://react-tabbed-menu.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Tabbed-Menu)
+[Site🔗](https://react-tabbed-menu.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Tabbed-Menu)
 
 A menu with tabs that uses `useState`.
 
 ### FAQ Accordion
 
-[React FAQ Accordion](https://react-faq-accordion.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-FAQ-Accordion)
+[Site🔗](https://react-faq-accordion.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-FAQ-Accordion)
 
 An accordion of FAQs that uses `useState`.
 
 ### Quotes
 
-[React Quotes](https://react-quotes.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Quotes)
+[Site🔗](https://react-quotes.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Quotes)
 
 A carousel of quotes that uses `useState`.
 
 ### Tours
 
-[React Tours](https://react-tours.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Tours)
+[Site🔗](https://react-tours.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Tours)
 
 A list of tours that uses `useState` and `useEffect`.
 
 ### Birthdays
 
-[React Birthdays](https://react-birthdays.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Birthdays)
+[Site🔗](https://react-birthdays.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Birthdays)
 
 A list of people that uses `useState`.
 
 ### Backroads
 
-[Backroads🔗](https://backroads.cordaro.dev)  [GitHub🔗](https://github.com/matthewcordaro/Portfolio-React-Backroads)
+[Site🔗](https://backroads.cordaro.dev)  [GitHub🔗](https://github.com/matthewcordaro/Portfolio-React-Backroads)
 
 A basic, raw, React site. It is not built with any framework like Next.js, nor a built tool like Vite.
