added react slider to portfolio.mdx

--- a/pages/portfolio.mdx
+++ b/pages/portfolio.mdx
@@ -9,6 +9,16 @@ description: Let me introduce myself
 
 A list of React sites running on Netlify
 
+Portfolio-React-Slider
+
+### Slider & Slick Carousel
+
+[Site🔗](https://react-slider.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Slider)
+
+A pair of sliders (carousels).
+One coded with `useEffect` & `useState`,
+the other built with [Slick](https://github.com/akiran/react-slick).
+
 ### Tabbed Resume
 
 [Site🔗](https://react-tabbed-resume.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Tabbed-Resume)
