add image for Easy Audio Toggle in projects.mdx

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -11,6 +11,7 @@ Here are some projects I’ve been involved with over the years that I can share
 ---
 
 ## Easy Audio Toggle
+![Easy Audio Toggle](/images/EasyAudioToggle.png)
 
 **Version 1.1.0** Released March 23, 2025
 
