update portfolio.mdx with new project descriptions and links

--- a/pages/portfolio.mdx
+++ b/pages/portfolio.mdx
@@ -9,13 +9,37 @@ description: Let me introduce myself
 
 A list of React sites running on Netlify
 
+### Navbar
+
+[Site🔗](https://navbar-react.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Navbar)
+
+A dynamic navbar with that uses `useState` and `useRef`. (Try resizing the window.)
+
+### Grocery List
+
+[Site🔗](https://react-grocery-list.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Grocery-List)
+
+A grocery list that uses `useState`, local storage to save on reload and [React Toastify](https://fkhadra.github.io/react-toastify).
+
+### Color Generator
+
+[Site🔗](https://react-color-generator.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Color-Generator)
+
+A dynamic color pallet generator that uses `useState` and [React Toastify](https://fkhadra.github.io/react-toastify).
+
+### Lorem Ipsum
+
+[Site🔗](https://react-lorem-ipsum.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Lorem-Ipsum)
+
+A "lorem ipsum" paragraph generator that uses `useState`.
+
 ### Slider & Slick Carousel
 
 [Site🔗](https://react-slider.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Slider)
 
 A pair of sliders (carousels).
 One coded with `useEffect` & `useState`,
-the other built with [Slick](https://github.com/akiran/react-slick).
+the other built with [React Slick](https://react-slick.neostack.com/).
 
 ### Tabbed Resume
 
