fix broken link and oxford comma

--- a/pages/portfolio.mdx
+++ b/pages/portfolio.mdx
@@ -11,7 +11,7 @@ A list of React sites running on Netlify
 
 ### Navbar
 
-[Site🔗](https://navbar-react.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Navbar)
+[Site🔗](https://react-navbar.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Navbar)
 
 A dynamic navbar with that uses `useState` and `useRef`. (Try resizing the window.)
 
@@ -19,7 +19,8 @@ A dynamic navbar with that uses `useState` and `useRef`. (Try resizing the windo
 
 [Site🔗](https://react-grocery-list.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Grocery-List)
 
-A grocery list that uses `useState`, local storage to save on reload and [React Toastify](https://fkhadra.github.io/react-toastify).
+A grocery list that uses `useState`, local storage to save on reload, and [React Toastify](https://fkhadra.github.
+io/react-toastify).
 
 ### Color Generator
 
