unbreak link again.

--- a/pages/portfolio.mdx
+++ b/pages/portfolio.mdx
@@ -19,8 +19,7 @@ A dynamic navbar with that uses `useState` and `useRef`. (Try resizing the windo
 
 [Site🔗](https://react-grocery-list.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Grocery-List)
 
-A grocery list that uses `useState`, local storage to save on reload, and [React Toastify](https://fkhadra.github.
-io/react-toastify).
+A grocery list that uses `useState`, local storage to save on reload, and [React Toastify](https://fkhadra.github.io/react-toastify).
 
 ### Color Generator
 
