Added Sidebar & Modal portfolio project

--- a/pages/portfolio.mdx
+++ b/pages/portfolio.mdx
@@ -9,6 +9,12 @@ description: Let me introduce myself
 
 A list of React sites running on Netlify
 
+### Sidebar & Modal
+
+[Site🔗](https://react-sidebar-modal.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Sidebar-Modal)
+
+A sidebar and a modal that uses `useContext`, `createContext`, and `useState` in a global `AppProvider`.
+
 ### Navbar
 
 [Site🔗](https://react-navbar.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Navbar)
