Add new React projects with images and descriptions to portfolio

--- a/pages/portfolio.mdx
+++ b/pages/portfolio.mdx
@@ -7,7 +7,23 @@ description: Let me introduce myself
 
 ## React
 
-A list of React sites running on Netlify
+A list of React sites running on Netlify...
+
+### Cart
+
+<img src="/images/portfolio/react-cart.webp" alt ="React Cart" width='500px'/>
+
+[Site🔗](https://react-cart.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Cart)
+
+A basic shopping cart that uses `useReducer`, `useEffect`, and _Context_ in a global `AppProvider`.
+
+### Submenu
+
+<img src="/images/portfolio/react-submenu.webp" alt ="React Submenu" width='500px'/>
+
+[Site🔗](https://react-submenu.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Submenu)
+
+A cool dynamic submenu that uses `useState`, `useRef`, and _Context_ in a global `AppProvider`.
 
 ### Sidebar & Modal
 
