Update project images to use <img> tags to avoid page crashed from Nextra v2

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -11,7 +11,8 @@ Here are some projects I’ve been involved with over the years that I can share
 ---
 
 ## Easy Audio Toggle
-![Easy Audio Toggle](/images/EasyAudioToggle.png)
+
+<img src="/images/EasyAudioToggle.png" alt ="Easy Audio Toggle"/>
 
 **Version 1.1.0** Released March 23, 2025
 
@@ -24,7 +25,9 @@ _For more info [checkout my blogpost](/posts/Building-Easy-Audio-Toggle)_
 ---
 
 ## Bowling Ball Holder with Nameplate
-![Alpha Ball Holder with Name](/images/ball-holder-with-name.jpg)
+
+<img src="/images/ball-holder-with-name.jpg" alt ="Alpha Ball Holder with Name" width='480'/>
+
 _Alpha build above_
 
 I created this fully customizable OpenSCAD of a bowling ball holder that can have text put on it! You can change the text, text, depth. Make the text inny or outty. Change the wall thickness, holder height, lip size, and more!
@@ -36,7 +39,9 @@ Checkout [Bowling Ball Holder with Text](https://github.com/matthewcordaro/Bowli
 ---
 
 ## CEWIT - Stony Brook Smart Transit System _Discontinued_
-![Smart Transit Bus](/images/CEWIT/Transit-bus.jpg)
+
+<img src="/images/CEWIT/Transit-bus.jpg" alt ="Smart Transit Bus" width='600'/>
+
 SBU Brook University Smart Transit was the Stony Brook University "student developed passenger information system" for SBU Transit.
 SBU Smart Transit was developed through a partnership between the Stony Brook University Department of Transportation and Parking Operations, the Center of Excellence in Wireless and Information Technology (CEWIT) and the College of Engineering and Applied Sciences.
 It was a comprehensive bus and shuttle global positioning system that provides live vehicle location, bus stop information, and estimated arrival times to passengers using web and mobile-based applications.
@@ -52,7 +57,9 @@ https://mmcdruginformation.nysdoh.suny.edu/
 ---
 
 ## Reality Deck @ CEWIT
-![CEWIT Video Wall](/images/CEWIT/DSCF0149-1600x1067.jpg)
+
+<img src="/images/CEWIT/DSCF0149-1600x1067.jpg" alt ="CEWIT Video Wall" width='480'/>
+
 _On July 13, 2010, Stony Brook University received a $1.4 million National Science Foundation grant to build the "Reality Deck," an Immersive Giga-pixel Display in a 40' x 30' x 11' high room in Stony Brook University's Center of Excellence in Wireless and Information Technology (CEWIT) containing 308 LCDs driven by an 85-node graphics computing cluster._
 
 I helped with the installation of hardware for a brief moment as an undergrad ad SBU.
