Update image widths in portfolio projects for consistency

--- a/pages/portfolio.mdx
+++ b/pages/portfolio.mdx
@@ -9,65 +9,81 @@ description: Let me introduce myself
 
 A list of React sites running on Netlify...
 
+---
+
 ### Cart
 
-<img src="/images/portfolio/react-cart.webp" alt ="React Cart" width='500px'/>
+<img src="/images/portfolio/react-cart.webp" alt ="React Cart" width='480'/>
 
 [Site🔗](https://react-cart.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Cart)
 
 A basic shopping cart that uses `useReducer`, `useEffect`, and _Context_ in a global `AppProvider`.
 
+---
+
 ### Submenu
 
-<img src="/images/portfolio/react-submenu.webp" alt ="React Submenu" width='500px'/>
+<img src="/images/portfolio/react-submenu.webp" alt ="React Submenu" width='480'/>
 
 [Site🔗](https://react-submenu.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Submenu)
 
 A cool dynamic submenu that uses `useState`, `useRef`, and _Context_ in a global `AppProvider`.
 
+---
+
 ### Sidebar & Modal
 
-<img src="/images/portfolio/react-sidebar-modal.webp" alt ="React Sidebar & Modal" width='500px'/>
+<img src="/images/portfolio/react-sidebar-modal.webp" alt ="React Sidebar & Modal" width='480'/>
 
 [Site🔗](https://react-sidebar-modal.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Sidebar-Modal)
 
 A cool dynamic sidebar and a modal that uses `useState` and _Context_ in a global `AppProvider`.
 
+---
+
 ### Navbar
 
-<img src="/images/portfolio/react-navbar.webp" alt ="React Navbar" width='500px'/>
+<img src="/images/portfolio/react-navbar.webp" alt ="React Navbar" width='480'/>
 
 [Site🔗](https://react-navbar.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Navbar)
 
 A dynamic navbar with that uses `useState` and `useRef`.
 
+---
+
 ### Grocery List
 
-<img src="/images/portfolio/react-grocery-list.webp" alt ="React Grocery List" width='500px'/>
+<img src="/images/portfolio/react-grocery-list.webp" alt ="React Grocery List" width='480'/>
 
 [Site🔗](https://react-grocery-list.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Grocery-List)
 
 A grocery list that uses `useState`, local storage to save on reload, and [React Toastify](https://fkhadra.github.io/react-toastify).
 
+---
+
 ### Color Generator
 
-<img src="/images/portfolio/react-color-generator.webp" alt ="React Color Generator" width='500px'/>
+<img src="/images/portfolio/react-color-generator.webp" alt ="React Color Generator" width='480'/>
 
 [Site🔗](https://react-color-generator.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Color-Generator)
 
 A dynamic color pallet generator that uses `useState` and [React Toastify](https://fkhadra.github.io/react-toastify).
 
+---
+
 ### Lorem Ipsum
 
-<img src="/images/portfolio/react-lorem-ipsum.webp" alt ="React Lorem Ipsum" width='500px'/>
+<img src="/images/portfolio/react-lorem-ipsum.webp" alt ="React Lorem Ipsum" width='480'/>
 
 [Site🔗](https://react-lorem-ipsum.cordaro.dev/) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Lorem-Ipsum)
 
 A "lorem ipsum" paragraph generator that uses `useState`.
 
+---
+
 ### Slider & Slick Carousel
 
-<img src="/images/portfolio/react-slider.webp" alt ="React Slider & Slick Carousel" width='500px'/>
+<img src="/images/portfolio/react-slider.webp" alt ="React Slider & Slick Carousel" width='480'/>
 
 [Site🔗](https://react-slider.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Slider)
 
@@ -75,57 +91,71 @@ A pair of automatic sliders (carousels).
 One coded with `useEffect` & `useState`,
 the other built with [React Slick](https://react-slick.neostack.com/).
 
+---
+
 ### Tabbed Resume
 
-<img src="/images/portfolio/react-tabbed-resume.webp" alt ="React Tabbed Resume" width='500px'/>
+<img src="/images/portfolio/react-tabbed-resume.webp" alt ="React Tabbed Resume" width='480'/>
 
 [Site🔗](https://react-tabbed-resume.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Tabbed-Resume)
 
 A dynamic resume with tabs that uses `useState`.
 
+---
+
 ### Tabbed Menu
 
-<img src="/images/portfolio/react-tabbed-menu.webp" alt ="React Tabbed Menu" width='500px'/>
+<img src="/images/portfolio/react-tabbed-menu.webp" alt ="React Tabbed Menu" width='480'/>
 
 [Site🔗](https://react-tabbed-menu.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Tabbed-Menu)
 
 A dynamic menu with tabs that uses `useState`.
 
+---
+
 ### FAQ Accordion
 
-<img src="/images/portfolio/react-faq-accordion.webp" alt ="React FAQ Accordion" width='500px'/>
+<img src="/images/portfolio/react-faq-accordion.webp" alt ="React FAQ Accordion" width='480'/>
 
 [Site🔗](https://react-faq-accordion.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-FAQ-Accordion)
 
 An accordion of FAQs that uses `useState`.
 
+---
+
 ### Quotes
 
-<img src="/images/portfolio/react-quotes.webp" alt ="React Quotes" width='500px'/>
+<img src="/images/portfolio/react-quotes.webp" alt ="React Quotes" width='480'/>
 
 [Site🔗](https://react-quotes.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Quotes)
 
 A basic carousel of quotes that uses `useState`.
 
+---
+
 ### Tours
 
-<img src="/images/portfolio/react-tours.webp" alt ="React Tours" width='500px'/>
+<img src="/images/portfolio/react-tours.webp" alt ="React Tours" width='480'/>
 
 [Site🔗](https://react-tours.cordaro.dev)  [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Tours)
 
 A dynamic list of tours that uses `useState` and `useEffect`.
 
+---
+
 ### Birthdays
 
-<img src="/images/portfolio/react-birthdays.webp" alt ="React Birthdays" width='500px'/>
+<img src="/images/portfolio/react-birthdays.webp" alt ="React Birthdays" width='480'/>
 
 [Site🔗](https://react-birthdays.cordaro.dev) [Github🔗](https://github.com/matthewcordaro/Portfolio-React-Birthdays)
 
 A clearable list of people that uses `useState`.
 
+---
+
 ### Backroads
 
-<img src="/images/portfolio/react-backroads.webp" alt ="React Backroads" width='500px'/>
+<img src="/images/portfolio/react-backroads.webp" alt ="React Backroads" width='480'/>
 
 [Site🔗](https://backroads.cordaro.dev)  [GitHub🔗](https://github.com/matthewcordaro/Portfolio-React-Backroads)
 
